Partially fixed header - 100% width + better alignment

--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -28,7 +28,7 @@ body > * { grid-column: 2/12; }
 header { grid-column: 1/-1; }
 footer { grid-column: 1/-1; }
 
-.header-background { grid-column: 1/-1}
+.header-background { grid-column: 1/-1; }
 
 
 /*-----MENU-----*/
@@ -75,14 +75,40 @@ body {
 
 /*-----NAVBAR-----*/
 
+//header {
+//    order: 0;
+//}
+//.header-inner {
+//    display: flex;
+//    flex-direction: column;
+//    align-items: center;
+////    padding: 0px;
+////    background-color:;
+////    border-bottom:;
+//}
+//
+//.logo-image {
+//    display:block;
+//}
+//
+//.nav {
+//    margin-top: 5px;
+//}
+//.nav-link {
+//    display: inline-block;
+//    text-decoration: none;
+//}
 header {
-    position: fixed;
-    z-index: 999;
+        position: fixed;
+//    top: 0;
+//    left: 0; 
+    width: 100%;
+    z-index: 998;
 }
 
 .header-elements {
-    display:flex;
-//    justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 // This would speace the logo and nag on left and right, but, this is overridden by header having position of 'fixed'
 //How do I get the navigation to align to the right side of screen?
 }
@@ -90,19 +116,19 @@ header {
 .header-background {
     width: 100%;
     height: 180px;
-    transform: translateY(-20px);
     position: fixed;
-    z-index: 997;   
+//    z-index: 997;   
 }
 
-.logo {
-    max-height: 70px;
+.logo-image {
+    max-height: 100px;
     margin: 20px 120px;
-    z-index: 998;
+    z-index: 999;
 }
 .nav {
-    margin: 30px 0px;
-    z-index: 998;
+//    margin: 30px 0px;
+    margin-top: 40px;
+    z-index: 999;
 }
 
 .nav-link {
@@ -110,13 +136,27 @@ header {
     font-size: 100%;
     color: black;
     text-decoration: none;
-    margin: 20px;
+    margin-left: 40px;
 }
 .language {
+    z-index: 999;
+    margin-right: 120px;
+    margin-top: 40px;
+    display:flex;
+    flex-direction: column;
+//    display:flex;
+//    justify-content: flex-end;
+}
+.language-link {
     font-family: $text;
     font-size: 70%;
-    z-index: 998;
+    text-decoration: none;
+    color: black;
+    margin-top: 10px;
+    
 }
+
+
 
 /*-----SLIDESHOW-----*/
 //Original guide: https://css-tricks.com/snippets/jquery/simple-auto-playing-slideshow/ ******
@@ -153,6 +193,7 @@ p {
 
 /*-----MENU-----*/
 
+//CSS grid display 
 .menu-items {
     display:grid;
     grid-gap: 15px;
